==> wdsll/lixun/2000KW_OBC/USER_APP/src/W5500.c <==
#include "W5500.h"
#include "bsp_SysTicks.h"
#define TCP_SERVER	0x00	                  // TCP服务器模式
#define TCP_CLIENT	0x01	                  // TCP客户端模式
#define UDP_MODE	  0x02	                  // UDP(广播)模式
#define S_INIT		0x01	                    // 端口完成初始化
#define S_CONN		0x02	                    // 端口完成连接,可以正常传输数据
#define S_RECEIVE	   0x01	                  // 端口接收到一个数据包
#define S_TRANSMITOK 0x02	                  // 端口发送一个数据包完成

void Write_W5500_1Byte(unsigned short reg, unsigned char dat)
{
	gpio_bit_reset(W5500_SCS_PORT, W5500_SCS);                     // 置W5500的SCS为低电平
	SPI2_Send_Short(reg);                                        // 通过SPI2写16位寄存器地址
	SPI2_Send_Byte(FDM1|RWB_WRITE|COMMON_R);                     // 通过SPI2写控制字节,1个字节数据长度,写数据,选择通用寄存器
	SPI2_Send_Byte(dat);                                         // 写1个字节数据
  gpio_bit_set(W5500_SCS_PORT, W5500_SCS);                       // 置W5500的SCS为高电平
}

void Write_W5500_2Byte(unsigned short reg, unsigned short dat)
{
	gpio_bit_reset(W5500_SCS_PORT, W5500_SCS);                              // 置W5500的SCS为低电平
		
	SPI2_Send_Short(reg);                                                   // 通过SPI2写16位寄存器地址
	SPI2_Send_Byte(FDM2|RWB_WRITE|COMMON_R);                                // 通过SPI2写控制字节,2个字节数据长度,写数据,选择通用寄存器
	SPI2_Send_Short(dat);                                                   // 写16位数据

	gpio_bit_set(W5500_SCS_PORT, W5500_SCS);                                // 置W5500的SCS为高电平
}

void Write_W5500_nByte(unsigned short reg, unsigned char *dat_ptr, unsigned short size)
{
	unsigned short i;

	gpio_bit_reset(W5500_SCS_PORT, W5500_SCS);                              // 置W5500的SCS为低电平	
	
	SPI2_Send_Short(reg);                                                   // 通过SPI2写16位寄存器地址
	SPI2_Send_Byte(VDM|RWB_WRITE|COMMON_R);                                 // 通过SPI2写控制字节,N个字节数据长度,写数据,选择通用寄存器

	for(i=0;i<size;i++)                                                     // 循环将缓冲区的size个字节数据写入W5500
	{
		SPI2_Send_Byte(*dat_ptr++);                                           // 写一个字节数据
	}
	gpio_bit_set(W5500_SCS_PORT, W5500_SCS);                                // 置W5500的SCS为高电平
}

void Write_W5500_SOCK_1Byte(SOCKET s, unsigned short reg, unsigned char dat)
{
	gpio_bit_reset(W5500_SCS_PORT, W5500_SCS);                             // 置W5500的SCS为低电平	
		
	SPI2_Send_Short(reg);                                                  // 通过SPI2写16位寄存器地址
	SPI2_Send_Byte(FDM1|RWB_WRITE|(s*0x20+0x08));                          // 通过SPI2写控制字节,1个字节数据长度,写数据,选择端口s的寄存器
	SPI2_Send_Byte(dat);                                                   // 写1个字节数据

	gpio_bit_set(W5500_SCS_PORT, W5500_SCS);                               // 置W5500的SCS为高电平
}

void Write_W5500_SOCK_2Byte(SOCKET s, unsigned short reg, unsigned short dat)
{
	gpio_bit_reset(W5500_SCS_PORT, W5500_SCS);   //置W5500的SCS为低电平
			
	SPI2_Send_Short(reg);                        //通过SPI2写16位寄存器地址
	SPI2_Send_Byte(FDM2|RWB_WRITE|(s*0x20+0x08));//通过SPI2写控制字节,2个字节数据长度,写数据,选择端口s的寄存器
	SPI2_Send_Short(dat);                        //写16位数据

	gpio_bit_set(W5500_SCS_PORT, W5500_SCS);     //置W5500的SCS为高电平
}

void Write_W5500_SOCK_4Byte(SOCKET s, unsigned short reg, unsigned char *dat_ptr)
{
	gpio_bit_reset(W5500_SCS_PORT, W5500_SCS);   //置W5500的SCS为低电平
			
	SPI2_Send_Short(reg);                        //通过SPI2写16位寄存器地址
	SPI2_Send_Byte(FDM4|RWB_WRITE|(s*0x20+0x08));//通过SPI2写控制字节,4个字节数据长度,写数据,选择端口s的寄存器

	SPI2_Send_Byte(*dat_ptr++);                  //写第1个字节数据
	SPI2_Send_Byte(*dat_ptr++);                  //写第2个字节数据
	SPI2_Send_Byte(*dat_ptr++);                  //写第3个字节数据
	SPI2_Send_Byte(*dat_ptr++);                  //写第4个字节数据

	gpio_bit_set(W5500_SCS_PORT, W5500_SCS);     //置W5500的SCS为高电平
}

unsigned char Read_W5500_1Byte(unsigned short reg)
{
	unsigned char i;

	gpio_bit_reset(W5500_SCS_PORT, W5500_SCS);//置W5500的SCS为低电平
			
	SPI2_Send_Short(reg);                     //通过SPI2写16位寄存器地址
	SPI2_Send_Byte(FDM1|RWB_READ|COMMON_R);   //通过SPI2写控制字节,1个字节数据长度,读数据,选择通用寄存器

	i=spi_i2s_data_receive(SPI2);
	SPI2_Send_Byte(0x00);                     //发送一个哑数据
	i=spi_i2s_data_receive(SPI2);             //读取1个字节数据

	gpio_bit_set(W5500_SCS_PORT, W5500_SCS);  //置W5500的SCS为高电平
	return i;                                 //返回读取到的寄存器数据
}

unsigned char Read_W5500_SOCK_1Byte(SOCKET s, unsigned short reg)
{
	unsigned char i;

	gpio_bit_reset(W5500_SCS_PORT, W5500_SCS);  //置W5500的SCS为低电平
			
	SPI2_Send_Short(reg);                       //通过SPI2写16位寄存器地址
	SPI2_Send_Byte(FDM1|RWB_READ|(s*0x20+0x08));//通过SPI2写控制字节,1个字节数据长度,读数据,选择端口s的寄存器

	i=spi_i2s_data_receive(SPI2);
	SPI2_Send_Byte(0x00);                       //发送一个哑数据
	i=spi_i2s_data_receive(SPI2);               //读取1个字节数据

	gpio_bit_set(W5500_SCS_PORT, W5500_SCS);    //置W5500的SCS为高电平
	return i;                                   //返回读取到的寄存器数据
}

unsigned short Read_W5500_SOCK_2Byte(SOCKET s, unsigned short reg)
{
	unsigned short i;

	gpio_bit_reset(W5500_SCS_PORT, W5500_SCS);  //置W5500的SCS为低电平
			
	SPI2_Send_Short(reg);                       //通过SPI2写16位寄存器地址
	SPI2_Send_Byte(FDM2|RWB_READ|(s*0x20+0x08));//通过SPI2写控制字节,2个字节数据长度,读数据,选择端口s的寄存器

	i=spi_i2s_data_receive(SPI2);
	SPI2_Send_Byte(0x00);                       //发送一个哑数据
	i=spi_i2s_data_receive(SPI2);               //读取高位数据
	SPI2_Send_Byte(0x00);                       //发送一个哑数据 
	i*=256;
	i+=spi_i2s_data_receive(SPI2);              //读取低位数据

	gpio_bit_set(W5500_SCS_PORT, W5500_SCS);    //置W5500的SCS为高电平
	return i;                                   //返回读取到的寄存器数据
}

unsigned short Read_SOCK_Data_Buffer(SOCKET s, unsigned char *dat_ptr)
{
	unsigned short rx_size;
	unsigned short offset, offset1;
	unsigned short i;
	unsigned char  j;

	rx_size=Read_W5500_SOCK_2Byte(s,Sn_RX_RSR);
	if(rx_size==0) return 0;                           // 没接收到数据则返回
	if(rx_size>1460) rx_size=1460;                     // 读取的数据长度为1460个字节

	offset=Read_W5500_SOCK_2Byte(s,Sn_RX_RD);
	offset1=offset;
	offset&=(S_RX_SIZE-1);                             // 计算实际的物理地址

	gpio_bit_reset(W5500_SCS_PORT, W5500_SCS);         // 置W5500的SCS为低电平

	SPI2_Send_Short(offset);                           // 写16位地址
	SPI2_Send_Byte(VDM|RWB_READ|(s*0x20+0x18));        // 写控制字节,N个字节数据长度,读数据,选择端口s的寄存器
	j=spi_i2s_data_receive(SPI2);
	
	if((offset+rx_size)<S_RX_SIZE)                     // 如果最大地址未超过W5500接收缓冲区寄存器的最大地址
	{
		for(i=0;i<rx_size;i++)                           // 循环读取rx_size个字节数据
		{
			SPI2_Send_Byte(0x00);                //发送一个哑数据
			j=spi_i2s_data_receive(SPI2);        //读取1个字节数据
			*dat_ptr=j;                          //将读取到的数据保存到数据保存缓冲区
			dat_ptr++;                           //数据保存缓冲区指针地址自增1
		}
	}
	else                                         //如果最大地址超过W5500接收缓冲区寄存器的最大地址
	{
		offset=S_RX_SIZE-offset;
		for(i=0;i<offset;i++)                    //循环读取出前offset个字节数据
		{
			SPI2_Send_Byte(0x00);                //发送一个哑数据
			j=spi_i2s_data_receive(SPI2);        //读取1个字节数据
			*dat_ptr=j;                          //将读取到的数据保存到数据保存缓冲区
			dat_ptr++;                           //数据保存缓冲区指针地址自增1
		}
		gpio_bit_set(W5500_SCS_PORT, W5500_SCS); //置W5500的SCS为高电平

		gpio_bit_reset(W5500_SCS_PORT, W5500_SCS); //置W5500的SCS为低电平

		SPI2_Send_Short(0x00);                     //写16位地址
		SPI2_Send_Byte(VDM|RWB_READ|(s*0x20+0x18));//写控制字节,N个字节数据长度,读数据,选择端口s的寄存器
		j=spi_i2s_data_receive(SPI2);

		for(;i<rx_size;i++)                        //循环读取后rx_size-offset个字节数据
		{
			SPI2_Send_Byte(0x00);                  //发送一个哑数据
			j=spi_i2s_data_receive(SPI2);          //读取1个字节数据
			*dat_ptr=j;                            //将读取到的数据保存到数据保存缓冲区
			dat_ptr++;                             //数据保存缓冲区指针地址自增1
		}
	}
	gpio_bit_set(W5500_SCS_PORT, W5500_SCS);       //置W5500的SCS为高电平

	offset1+=rx_size;                              //更新实际物理地址,即下次读取接收到的数据的起始地址
	Write_W5500_SOCK_2Byte(s, Sn_RX_RD, offset1);
	Write_W5500_SOCK_1Byte(s, Sn_CR, RECV);        //发送启动接收命令
	return rx_size;                                //返回接收到数据的长度
}

void Write_SOCK_Data_Buffer(SOCKET s, unsigned char *dat_ptr, unsigned short size)
{
	unsigned short offset,offset1;
	unsigned short i;

	//如果是UDP模式,可以在此设置目的主机的IP和端口号
	if((Read_W5500_SOCK_1Byte(s,Sn_MR)&0x0f) != SOCK_UDP)                   //如果Socket打开失败
	{		
		Write_W5500_SOCK_4Byte(s, Sn_DIPR, UDP_DIPR);                       //设置目的主机IP  		
		Write_W5500_SOCK_2Byte(s, Sn_DPORTR, UDP_DPORT[0]*256+UDP_DPORT[1]);//设置目的主机端口号				
	}

	offset=Read_W5500_SOCK_2Byte(s,Sn_TX_WR);
	offset1=offset;
	offset&=(S_TX_SIZE-1);                      //计算实际的物理地址

	gpio_bit_reset(W5500_SCS_PORT, W5500_SCS);  //置W5500的SCS为低电平

	SPI2_Send_Short(offset);                    //写16位地址
	SPI2_Send_Byte(VDM|RWB_WRITE|(s*0x20+0x10));//写控制字节,N个字节数据长度,写数据,选择端口s的寄存器

	if((offset+size)<S_TX_SIZE)                 //如果最大地址未超过W5500发送缓冲区寄存器的最大地址
	{
		for(i=0;i<size;i++)                     //循环写入size个字节数据
		{
			SPI2_Send_Byte(*dat_ptr++);         //写入一个字节的数据		
		}
	}
	else                                        //如果最大地址超过W5500发送缓冲区寄存器的最大地址
	{
		offset=S_TX_SIZE-offset;
		for(i=0;i<offset;i++)                   //循环写入前offset个字节数据
		{
			SPI2_Send_Byte(*dat_ptr++);         //写入一个字节的数据
		}
		gpio_bit_set(W5500_SCS_PORT, W5500_SCS);    //置W5500的SCS为高电平

		gpio_bit_reset(W5500_SCS_PORT, W5500_SCS);  //置W5500的SCS为低电平

		SPI2_Send_Short(0x00);                      //写16位地址
		SPI2_Send_Byte(VDM|RWB_WRITE|(s*0x20+0x10));//写控制字节,N个字节数据长度,写数据,选择端口s的寄存器

		for(;i<size;i++)                            //循环写入size-offset个字节数据
		{
			SPI2_Send_Byte(*dat_ptr++);             //写入一个字节的数据
		}
	}
	gpio_bit_set(W5500_SCS_PORT, W5500_SCS);        //置W5500的SCS为高电平

	offset1+=size;                                  //更新实际物理地址,即下次写待发送数据到发送数据缓冲区的起始地址
	Write_W5500_SOCK_2Byte(s, Sn_TX_WR, offset1);
	Write_W5500_SOCK_1Byte(s, Sn_CR, SEND);         //发送启动发送命令				
}

void W5500_Hardware_Reset(void)
{
	unsigned char i=0;
	gpio_bit_reset(W5500_RST_PORT, W5500_RST); //复位引脚拉低
	delay_ms(50);                             //延时50毫秒
	gpio_bit_set(W5500_RST_PORT, W5500_RST);   //复位引脚拉高
	delay_ms(100);                            //延时100毫秒
	do
	{
		if((Read_W5500_1Byte(PHYCFGR)&LINK)!=0)			return;
		i++;
	}
	while(i<10);//等待以太网连接完成
}

void W5500_Socket_Set(void)
{
	if(S0_State==0)//端口0初始化配置
	{
		if(S0_Mode==TCP_SERVER)//TCP服务器模式 
		{
			if(Socket_Listen(0)==TRUE)
				S0_State=S_INIT;
			else
				S0_State=0;
		}
		else if(S0_Mode==TCP_CLIENT)//TCP客户端模式 
		{
			if(Socket_Connect(0)==TRUE)
				S0_State=S_INIT;
			else
				S0_State=0;
		}
		else//UDP模式 
		{
			if(Socket_UDP(0)==TRUE)
				S0_State=S_INIT|S_CONN;
			else
				S0_State=0;
		}
	}
}

void W5500_Interrupt_Process(void)
{
	unsigned char i,j;
IntDispose:
	W5500_Interrupt=0;                                  // 清零中断标志
	i = Read_W5500_1Byte(IR);                           // 读取中断标志寄存器
	Write_W5500_1Byte(IR, (i&0xf0));                    // 回写清除中断标志

	if((i & CONFLICT) == CONFLICT)                      // IP地址冲突异常处理
	{
		//自己添加代码
	}

	if((i & UNREACH) == UNREACH)                        // UDP模式下地址无法到达异常处理
	{
		//自己添加代码
	}

	i=Read_W5500_1Byte(SIR);                            // 读取端口中断标志寄存器	
	if((i & S0_INT) == S0_INT)                          // Socket0事件处理 
	{
		j=Read_W5500_SOCK_1Byte(0,Sn_IR);                 // 读取Socket0中断标志寄存器
		Write_W5500_SOCK_1Byte(0,Sn_IR,j);
		if(j&IR_CON)                                      // 在TCP模式下,Socket0成功连接 
		{
			S0_State|=S_CONN;                               // 网络连接状态0x02,端口完成连接，可以正常传输数据
			usart_disable(USART1);
		}
		if(j&IR_DISCON)                                   // 在TCP模式下Socket断开连接处理
		{
			Write_W5500_SOCK_1Byte(0,Sn_CR,CLOSE);          // 关闭端口,等待重新打开连接 
			Socket_Init(0);		                              // 指定Socket(0~7)初始化,初始化端口0
			S0_State=0;                                     // 网络连接状态0x00,端口连接失败
			usart_enable(USART1);
		}
		if(j&IR_SEND_OK)                                  // Socket0数据发送完成,可以再次启动S_tx_process()函数发送数据 
		{
			S0_Data|=S_TRANSMITOK;                          // 端口发送一个数据包完成 
		}
		if(j&IR_RECV)                                     // Socket接收到数据,可以启动S_rx_process()函数 
		{
			S0_Data|=S_RECEIVE;                             // 端口接收到一个数据包
		}
		if(j&IR_TIMEOUT)                                  // Socket连接或数据传输超时处理 
		{
			Write_W5500_SOCK_1Byte(0,Sn_CR,CLOSE);          // 关闭端口,等待重新打开连接 
			S0_State=0;                                     // 网络连接状态0x00,端口连接失败
			usart_enable(USART1);
		}
	}
	W5500_Interrupt = 1;
	if(Read_W5500_1Byte(SIR) != 0) 
		goto IntDispose;
}
